--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-
+<!--comment text-->
 <form action="#" method="POST" enctype="multipart/form-data" id="my_form" onsubmit="alert(decodeURI(new URLSearchParams(Array.from(new FormData(document.getElementById('my_form')))).toString()));return false;">
     <fieldset>
         <legend>Общие данные</legend>
