--- a/form.html
+++ b/form.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 <!--comment text-->
+<!--hello world!-->
 <form action="#" method="POST" enctype="multipart/form-data" id="my_form" onsubmit="alert(decodeURI(new URLSearchParams(Array.from(new FormData(document.getElementById('my_form')))).toString()));return false;">
     <fieldset>
         <legend>Общие данные</legend>
