Auto stash before merge of "master" and "origin/master"

--- a/form.html
+++ b/form.html
@@ -20,6 +20,7 @@
 <body>
 <!--comment text-->
 <!--hello world!-->
+<!--qwe-->
 <form action="#" method="POST" enctype="multipart/form-data" id="my_form" onsubmit="alert(decodeURI(new URLSearchParams(Array.from(new FormData(document.getElementById('my_form')))).toString()));return false;">
     <fieldset>
         <legend>Общие данные</legend>
