--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Резюме</title>
 </head>
 <body>
-    <h3>Резюме: контент-менеджер, копирайтер</h3>
+    <h3>Резюме: контент-менеджер, копирайтер, крутотенюшки!</h3>
     <p><a href="index_en.html">English</a></p>
    <p><a href="https://scontent.fnlv2-1.fna.fbcdn.net/v/t1.0-9/53910526_817539928597989_8693171922030034944_n.jpg?_nc_cat=107&_nc_sid=85a577&_nc_oc=AQlD1FWJZe-4wxMjih0AjmoeuWcti6Tao17L__ZTzINa6oWGWgjLCfI5K-SHglX5QRA&_nc_ht=scontent.fnlv2-1.fna&oh=fa0ef07886d4bde8b14fa99ab37ed175&oe=5EEC56B1"><img src="https://scontent.fnlv2-1.fna.fbcdn.net/v/t1.0-9/53910526_817539928597989_8693171922030034944_n.jpg?_nc_cat=107&_nc_sid=85a577&_nc_oc=AQlD1FWJZe-4wxMjih0AjmoeuWcti6Tao17L__ZTzINa6oWGWgjLCfI5K-SHglX5QRA&_nc_ht=scontent.fnlv2-1.fna&oh=fa0ef07886d4bde8b14fa99ab37ed175&oe=5EEC56B1" width="200" height="200" alt="Photo Jeanne Lambert"></a></p>
    <h3>Лазарева Жанна Александровна</h3></br>
