add new comment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <p><b>Желаемый уровень дохода: </b>20-25 тыс. гривен</p></br>
    <h3>Ключевые знания и навыки:</h3>
    <ul>
-       <li>Знание особенностей разных типов информационного контента;</li>
+       <li>Знание особенностей разных типов информационного контента000000000;</li>
        <li>Поиск, анализ, отбор и обработка информации;</li>
        <li>Умение работать в CMS (Joomla, Open Cart, WordPress), файловых редакторах, редакторах изображений и социальных сетях;</li>
        <li>Способность создавать целевой, интересный контент для разнообразных тематических проектов;</li>
